--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,5 +1,15 @@
-<h1>Gold Investment - home</h1>
+<html>
+    {% include 'head.html' %}
 
-<p>
-    <a href="/analysis/">Start analysis...</a>
-</p>
+    <body>
+    <div class="container">
+        <h1>Gold Investment - home</h1>
+
+        <p>
+            <a href="/analysis/">Start analysis...</a>
+        </p>
+    </div>
+
+    </body>
+
+</html>
