second method: biggest relative

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,10 @@
         <h1>Gold Investment - home</h1>
 
         <p>
-            <a href="/analysis/">Start analysis...</a>
+            <a href="/analysis/?method=nominal">Start analysis - biggest nominal difference method...</a>
+        </p>
+        <p>
+            <a href="/analysis/?method=relative">Start analysis - biggest relative difference method...</a>
         </p>
     </div>
 
